force-app/main/default/objects/cgcloud__Account_Plan_User_Filter__c/cgcloud__Account_Plan_User_Filter__c.object-meta.xml
<CustomObject>
    <description>This object holds the filter selections of a user for a planning account.</description>
    <label>Account Plan User Filter</label>
    <nameField>
        <label>Account Plan User Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan User Filter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>