force-app/main/default/objects/cgcloud__Account_Plan_User_Filter__c/fields/cgcloud__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan User Filter</relationshipLabel>
    <relationshipName>Account_Plan_User_Filter</relationshipName>
    <type>Lookup</type>
</CustomField>