force-app/main/default/objects/cgcloud__Account_Plan_User_Filter__c/fields/cgcloud__Filter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Filter__c</fullName>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>