force-app/main/default/objects/cgcloud__Account_Plan_User_Filter__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plan_User_Filter</relationshipName>
    <type>Lookup</type>
</CustomField>